src/test/deca/context/invalid/created/object/equals_null_float.deca
// Description :
//    test equals entre un null et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
null a;
float b;
int c = a.equal(b);
}
